# Autonomous-Bug-Fixing-Assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  handoff.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py
app/agent/: __init__.py  cli.py  client.py  edit.py  guardrails.py  issue.py  localize.py  loop.py  models.py  prompts.py  solve.py  tools.py  writeup.py
app/api/: __init__.py  deps.py  findings.py  jobs.py  main.py  metrics.py  repos.py  security.py  webhooks.py
app/core/: __init__.py  allowlist.py  settings.py
app/db/: __init__.py  approvals.py  bootstrap.py  discovery.py  jobs.py  repos.py  session.py
app/discovery/: __init__.py  cli.py  finding.py  promote.py  scan.py  service.py  triage.py
app/index/: __init__.py  cli.py  clone.py  models.py  read.py  repo_brain.py  retrieval.py  search.py  symbols.py
app/models/: __init__.py  base.py  entities.py
app/runner/: __init__.py  cli.py  detect.py  importable.py  models.py  parse.py  pytest_runner.py  run.py  trace.py
app/sandbox/: __init__.py  base.py  docker.py  local.py  models.py
app/telemetry/: __init__.py  cost.py  logging.py  metrics.py  redaction.py  tracing.py
app/vcs/: __init__.py  approval.py  auth.py  bundle.py  cli.py  db_store.py  github.py  models.py  publish.py
app/workers/: __init__.py  control_tasks.py  pipeline.py  progress.py  queue.py  recovery.py  state.py  worker.py
docker/: sandbox.Dockerfile  sandbox.dotnet.Dockerfile  sandbox.elixir.Dockerfile  sandbox.go.Dockerfile  sandbox.jvm.Dockerfile  sandbox.node.Dockerfile  sandbox.php.Dockerfile  sandbox.python.Dockerfile  sandbox.ruby.Dockerfile  sandbox.rust.Dockerfile
docs/: ARCHITECTURE.md  BUILD_PLAN.md  DATA_MODEL.md  PHASE13_BUG_DISCOVERY.md  PHASE14_DEV_ORCHESTRATION.md  README.md  SECURITY.md  SEQUENCE_DIAGRAMS.md  SMOKE_TEST.md
eval/: __init__.py  cli.py  dataset.py  harness.py  score.py  swebench.py
eval/results/: phase11-baseline.json
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  types.ts
migrations/: env.py
migrations/versions/: 4c67766feb30_initial_schema.py  665f9ba23e6c_repo_nullable_install.py  a1b2c3d4e5f6_phase13_scan_finding.py  (+2 more)
tests/: conftest.py
(+122 files in other folders)
