[project]
name = "bugfix-assistant"
version = "0.1.0"
description = "Autonomous bug-fixing assistant: issue/stacktrace -> reproduce -> localize -> fix -> verify -> draft PR (human-gated)."
readme = "README.md"
requires-python = "==3.12.*"
license = { text = "Proprietary" }
authors = [{ name = "Parv Goyal" }]

dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
]

[project.optional-dependencies]
# Semantic RAG fallback (cut-order #4: last thing cut). Optional so Phase 1's
# lexical + symbol path works without Postgres/pgvector.
vector = [
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
]
# Pulled in by later phases; declared here so the scaffold is forward-compatible.
agent = [
    "anthropic>=0.40",
]

[project.scripts]
repo-brain = "app.index.cli:app"
bugfix-run = "app.runner.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests", "eval"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PTH", "RUF"]
ignore = ["B008"]  # typer uses function calls in argument defaults

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B017"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
exclude = ["^frontend/", "^eval/data/"]

[[tool.mypy.overrides]]
module = ["tree_sitter_python.*", "pgvector.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: tests that clone real repos / hit the network (deselect with -m 'not integration')",
    "docker: tests that build/run the sandbox image (require Docker; deselect with -m 'not docker')",
]

[tool.coverage.run]
source = ["app"]
branch = true
